--- a/index.css
+++ b/index.css
@@ -53,12 +53,12 @@ body::-webkit-scrollbar-thumb {
     outline: 2px solid #0088ff;
 }
 
-.search__input::-webkit-search-decoration,
-.search__input::-webkit-search-cancel-button,
-.search__input::-webkit-search-results-button,
-.search__input::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
     cursor: pointer;
-    padding: 2px;
+    padding: 1px;
 }
 
 .search__results {
